--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,12 +9,32 @@ html(lang="en")
     body 
         header
             h1 Noom
+            
         main
-            form#nick
-                input(type="text", placeholder="choose a nickname", required)
-                button Save
-            ul 
-            form#message
-                input(type="text", placeholder="write a msg", required)
-                button Send
-        script(src="/public/js/app.js") 
+            //- form#nick
+            //-     input(type="text", placeholder="choose a nickname", required)
+            //-     button Save
+            //- ul 
+            //- form#message
+            //-     input(type="text", placeholder="write a msg", required)
+            //-     button Send
+            //------------------------socket.io---------------------------------
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+                h4 Open Rooms:
+                ul
+                
+            div#room
+                h3
+                ul 
+                form#name
+                    input(placeholder="nickname", required, type="text")
+                    button Send
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
+        //- front-end socket.io 설치
+        script(src="/socket.io/socket.io.js") 
+        script(src="/public/js/app.js")
